Replaced old cathacks sponsorship packet with the new one, removed extra spacing and no longer useful comments in the code itself

--- a/css/main.css
+++ b/css/main.css
@@ -673,29 +673,6 @@ footer {
 	padding-bottom: 100px;
 }
 
-/*
-@media (min-width: 751px) {
-	#mc_embed_signup {
-		overflow: scroll;
-	}
-}
-*/
-/*
-@media (min-width: 751px) {
-	#mainWrapper {
-		display: flex !important;
-		box-sizing: border-box !important;
-	}
-
-	#mc_embed_signup {
-		overflow-y: hidden !important;
-		max-height: inherit;
-	}
-}
-*/
-
-/* Unrelated to responsive mainWrapper size */
-
 @media (max-height: 630px) {
 	#mainWrapper {
     	border: none !important;
@@ -952,237 +929,3 @@ footer {
 		padding-right: 50px;
 	}
 }
-
-/* Related to responsive mainWrapper size */
-
-/*
-@media (min-width: 320px) and (min-width: 50px) {
-	#mainWrapper {
-		height: 100vh !important;
-	}
-}
-*/
-/*
-@media (max-height: 750px) {
-	#mainWrapper {
-		min-height: 125%;
-	}
-}
-
-@media (max-height: 711px) {
-	#mainWrapper {
-		min-height: 130%;
-	}
-}
-
-@media (max-height: 700px) {
-	#mainWrapper {
-		min-height: 138%;
-	}
-}
-
-@media (max-height: 650px) {
-	#mainWrapper {
-		min-height: 148%;
-	}
-}
-
-@media (max-height: 550px) {
-	#mainWrapper {
-		min-height: 160%;
-	}
-}
-
-@media (max-height: 450px) {
-	#mainWrapper {
-		min-height: 175%;
-	}
-}
-
-@media (max-height: 350px) {
-	#mainWrapper {
-		min-height: 210%;
-	}
-}
-
-@media (max-height: 250px) {
-	#mainWrapper {
-		min-height: 275%;
-	}
-}
-
-@media (max-height: 150px) {
-	#mainWrapper {
-		min-height: 620%;
-	}
-}
-
-@media (max-height: 50px) {
-	#mainWrapper {
-		min-height: 1070% !important;
-	}
-}
-
-@media (max-width: 1550px) {
-	#mainWrapper {
-		min-height: 126%;
-	}
-}
-
-@media (max-width: 1450px) {
-	#mainWrapper {
-		min-height: 126%;
-	}
-}
-
-@media (max-width: 1350px) {
-	#mainWrapper {
-		min-height: 127%;
-	}
-}
-
-@media (max-width: 1250px) {
-	#mainWrapper {
-		min-height: 127%;
-	}
-}
-
-@media (max-width: 1150px) {
-	#mainWrapper {
-		min-height: 127%;
-	}
-}
-
-@media (max-width: 1050px) {
-	#mainWrapper {
-		min-height: 127%;
-	}
-}
-
-@media (max-width: 950px) {
-	#mainWrapper {
-		min-height: 128%;
-	}
-}
-
-@media (max-width: 850px) {
-	#mainWrapper {
-		min-height: 128%;
-	}
-}
-
-@media (max-width: 767px) {
-	#mainWrapper {
-		min-height: 130%;
-	}
-}
-
-@media (max-width: 751px) {
-	#mainWrapper {
-		min-height: 130%;
-	}
-}
-
-@media (max-width: 750px) {
-	#mainWrapper {
-		min-height:100%;
-	}
-}
-
-@media (max-width: 450px) {
-	#mainWrapper {
-		min-height:165%;
-	}
-}
-
-@media (max-width: 450px) and (max-height: 580px) {
-	#mainWrapper {
-		min-height:180%;
-	}
-}
-
-@media (max-width: 400px) {
-	#mainWrapper {
-		min-height:165%;
-	}
-}
-
-@media (max-width: 400px) and (max-height: 250px) {
-	#mainWrapper {
-		min-height:215%;
-	}
-}
-
-@media (max-width: 321px) and (max-height: 450px) {
-	#mainWrapper {
-		min-height:240% !important;
-	}
-}
-
-@media (max-width: 321px) and (max-height: 400px) {
-	#mainWrapper {
-		min-height:220% !important;
-	}
-}
-
-@media (max-width: 321px) and (max-height: 350px) {
-	#mainWrapper {
-		min-height:220% !important;
-	}
-}
-
-@media (max-width: 321px) and (max-height: 300px) {
-	#mainWrapper {
-		min-height:215% !important;
-	}
-}
-
-@media (max-width: 321px) and (max-height: 285px) {
-	#mainWrapper {
-		min-height:195% !important;
-	}
-}
-
-@media (max-width: 321px) and (max-height: 220px) {
-	#mainWrapper {
-		min-height:215% !important;
-	}
-}
-
-@media (max-width: 321px) and (max-height: 200px) {
-	#mainWrapper {
-		min-height:235% !important;
-	}
-}
-
-@media (max-width: 321px) and (max-height: 150px) {
-	#mainWrapper {
-		min-height:315% !important;
-	}
-}
-
-@media (max-width: 321px) and (max-height: 100px) {
-	#mainWrapper {
-		min-height:465% !important;
-	}
-}
-
-@media (max-width: 321px) and (max-height: 51px) {
-	#mainWrapper {
-		min-height:715% !important;
-	}
-}
-
-@media (max-width: 321px) {
-	#mainWrapper {
-		min-height:165%;
-	}
-}
-
-@media (max-width: 320px) {
-	#mainWrapper{
-		min-height: 145%;
-	}
-}
-
-/*
